--- a/EfcDataAccess/EfcDataAccess.csproj
+++ b/EfcDataAccess/EfcDataAccess.csproj
@@ -7,8 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="DTOs" />
-      <Folder Include="Models" />
+      <ProjectReference Include="..\Application\Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="DAOs" />
     </ItemGroup>
 
 </Project>
