--- a/HttpClients/HttpClients.csproj
+++ b/HttpClients/HttpClients.csproj
@@ -7,8 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="DTOs" />
-      <Folder Include="Models" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ClientInterfaces" />
+      <Folder Include="Implementations" />
     </ItemGroup>
 
 </Project>
