--- a/EfcDataAccess/EfcDataAccess.csproj
+++ b/EfcDataAccess/EfcDataAccess.csproj
@@ -14,4 +14,13 @@
       <Folder Include="DAOs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.12">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.12" />
+    </ItemGroup>
+
 </Project>
